<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="com.kjstudio.weex.activities.SignUpActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical|left">

        <TextView
            android:layout_width="@dimen/menu_width"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle_1"
            android:gravity="center_vertical|left"
            android:padding="@dimen/textview_padding_all" />

        <EditText
            android:layout_width="@dimen/menu_width"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/nameEdt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical|left"
        android:background="@color/color_background_gray">

        <TextView
            android:layout_width="@dimen/menu_width"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle_2"
            android:gravity="center_vertical|left"
            android:padding="@dimen/textview_padding_all" />

        <Button
            android:layout_width="@dimen/menu_width"
            android:layout_height="wrap_content"
            android:id="@+id/locationBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_caption_1"
            android:padding="@dimen/textview_padding_all" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="@dimen/menu_width_extend"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle_3"
            android:gravity="center"
            android:padding="@dimen/textview_padding_all" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="@dimen/menu_width"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/yes"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:id="@+id/yesBtn" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_Accent"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/noBtn"
                android:text="@string/no" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextBtn"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|right"
            android:background="@color/color_primary"
            android:textColor="@color/color_text_primary_inverse" />
    </RelativeLayout>


</LinearLayout>
